# android_external_xcbproto

./: .gitlab-ci.yml  Android.bp  Makefile.am  compile_py.sh  find_vpython.sh  gen.py  meson.build  meson_options.txt  xcb-proto.pc.in
src/: Android.bp  composite.xml  glx.xml  meson.build  randr.xml  shm.xml  sync.xml  xcb.xsd  xf86dri.xml  xfixes.xml  xinput.xml  xkb.xml  xproto.xml
xcbgen/: expr.py  meson.build  xtypes.py
